app_grafana/deploy_prometheus.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-svc
  labels:
    app: app-grafana
    tier: prometheus
spec:
  ports:
    - port: 9090
  selector:
    app: app-grafana
    tier: prometheus
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  labels:
    app: app-grafana
    tier: prometheus
    app.kubernetes.io/part-of: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-grafana
      tier: prometheus
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: app-grafana
        tier: prometheus
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/vt121170prj/prometheus
        name: prometheus
        ports:
        - containerPort: 9090
        volumeMounts:
        - name: prometheus-data
          mountPath: /prometheus
        - name: config-volume
          mountPath: /etc/prometheus/prometheus.yml
          subPath: prometheus.yml
      volumes:
      - name: prometheus-data
        persistentVolumeClaim:
          claimName: prometheus-pv-claim
      - name: config-volume
        configMap:
          name: prometheus-config
