app_grafana/route_wordpress.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: wordpress-route
  namespace: vt121170prj
  labels:
    app: wordpress
spec:
  host: wordpress-vt121170prj.apps.ocplab.vtal.intra
  port:
    targetPort: wordpress-service
  to:
    kind: Service
    name: wordpress
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
